@@ -1,2 +1,2 @@
 #include "Common.hh"
-#define BUILDTAG PACKAGE_NAME, PACKAGE_VERSION " / 5288", "2014-01-14 14:38:43 UTC", "Linux 2.6.32-54-generic i686", "'--host=i486-pc-linux-gnu' '--build=i486-pc-linux-gnu' '--target=i486-rpm-linux' '--program-prefix=' '--prefix=/usr' '--exec-prefix=/usr' '--bindir=/usr/bin' '--sbindir=/usr/sbin' '--sysconfdir=/etc' '--datadir=/usr/share' '--includedir=/usr/include' '--libdir=/usr/lib' '--libexecdir=/usr/libexec' '--localstatedir=/var' '--sharedstatedir=/usr/com' '--mandir=/usr/share/man' '--infodir=/usr/share/info' 'build_alias=i486-pc-linux-gnu' 'host_alias=i486-pc-linux-gnu' 'target_alias=i486-rpm-linux' 'CFLAGS=-O2 -g -march=i486' 'CXXFLAGS=-O2 -g -march=i486'"
+#define BUILDTAG PACKAGE_NAME, PACKAGE_VERSION " / 5296", "2014-01-15 12:37:16 UTC", "Linux 2.6.32-54-generic i686", "'--host=i486-pc-linux-gnu' '--build=i486-pc-linux-gnu' '--target=i486-rpm-linux' '--program-prefix=' '--prefix=/usr' '--exec-prefix=/usr' '--bindir=/usr/bin' '--sbindir=/usr/sbin' '--sysconfdir=/etc' '--datadir=/usr/share' '--includedir=/usr/include' '--libdir=/usr/lib' '--libexecdir=/usr/libexec' '--localstatedir=/var' '--sharedstatedir=/usr/com' '--mandir=/usr/share/man' '--infodir=/usr/share/info' 'build_alias=i486-pc-linux-gnu' 'host_alias=i486-pc-linux-gnu' 'target_alias=i486-rpm-linux' 'CFLAGS=-O2 -g -march=i486' 'CXXFLAGS=-O2 -g -march=i486'"
