@@ -1,0 +1,17 @@
+
+                                                                              ⊃ ∨ ∧ ⌊ ○ ⊂
+╔═════╦═════╦═════╦═════╦═════╦═════╦═════╦═════╦═════╦═════╦═════╦═════╦═════╦══════════╗
+║ ~   ║ ! ⌶ ║ @ ⍫ ║ # ⍒ ║ $ ⍋ ║ % ⌽ ║ ^ ⍉ ║ & ⊖ ║ * ⍟ ║ ( ⍱ ║ ) ⍲ ║ _ ! ║ + ⌹ ║          ║
+║ ` ◊ ║ 1 ¨ ║ 2 ¯ ║ 3 < ║ 4 ≤ ║ 5 = ║ 6 ≥ ║ 7 > ║ 8 ≠ ║ 9 ∨ ║ 0 ∧ ║ - × ║ = ÷ ║  BACKSP  ║
+╠═════╩══╦══╩══╦══╩══╦══╩══╦══╩══╦══╩══╦══╩══╦══╩══╦══╩══╦══╩══╦══╩══╦══╩══╦══╩══╦═══════╣
+║        ║ Q   ║ W ⍹ ║ E ⋸ ║ R   ║ T ⍨ ║ Y ¥ ║ U   ║ I ⍸ ║ O ⍥ ║ P ⍣ ║ { ⍞ ║ } ⍬ ║  | ⊣  ║
+║  TAB   ║ q ? ║ w ⍵ ║ e ∈ ║ r ⍴ ║ t ∼ ║ y ↑ ║ u ↓ ║ i ⍳ ║ o ○ ║ p ⋆ ║ [ ← ║ ] → ║  \ ⊢  ║
+╠════════╩═╦═══╩═╦═══╩═╦═══╩═╦═══╩═╦═══╩═╦═══╩═╦═══╩═╦═══╩═╦═══╩═╦═══╩═╦═══╩═╦═══╩═══════╣
+║ (CAPS    ║ A ⍶ ║ S   ║ D   ║ F   ║ G   ║ H ⍋ ║ J ⍤ ║ K   ║ L ⌷ ║ : ≡ ║ " ≢ ║           ║
+║  LOCK)   ║ a ⍺ ║ s ⌈ ║ d ⌊ ║ f _ ║ g ∇ ║ h ∆ ║ j ∘ ║ k ' ║ l ⎕ ║ ; ⍎ ║ ' ⍕ ║  RETURN   ║
+╠══════════╩═══╦═╩═══╦═╩═══╦═╩═══╦═╩═══╦═╩═══╦═╩═══╦═╩═══╦═╩═══╦═╩═══╦═╩═══╦═╩═══════════╣
+║              ║ Z   ║ X   ║ C ¢ ║ V   ║ B £ ║ N   ║ M   ║ < ⍪ ║ > ⍙ ║ ? ⍠ ║             ║
+║  SHIFT       ║ z ⊂ ║ x ⊃ ║ c ∩ ║ v ∪ ║ b ⊥ ║ n ⊤ ║ m | ║ , ⍝ ║ . ⍀ ║ / ⌿ ║    SHIFT    ║
+╚══════════════╩═════╩═════╩═════╩═════╩═════╩═════╩═════╩═════╩═════╩═════╩═════════════╝
+
+
